--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@radix-ui/react-dialog": "1.0.4",
     "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
-    "@vercel/postgres": "^0.5.1",
+    "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.0.0",
     "lucide-react": "0.279.0",
@@ -21,7 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "1.14.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "20.6.2",
@@ -30,10 +31,9 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.57.0",
     "eslint-config-next": "15.0.4",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.49",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
   "type": "module"
 }
-
